deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-devops-app
  template:
    metadata:
      labels:
        app: java-devops-app
    spec:
      containers:
        - name: java-devops-app
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
