service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-devops-service
spec:
  type: LoadBalancer
  selector:
    app: java-devops-app
  ports:
    - port: 8080
      targetPort: 8080
